todo:
	put command-line options in a struct for easier management
	parse options in a separate function
	after testing remove the artificial limit on distances
	add -nocache option [didn't work, because cache mechanics is embedded
	in the very core of the methods]
2013-02-25
	Switched to git version control system
2013-02-08
	MatrixMatchMaker.cpp:
		Made -z option (do not skip zero scores) valid for MMMLmode. The format is not pretty,
		but the only requirement was to output the clade sets IDs for
		the input matrices, which it does.
2013-01-15
	ProteinGroup.hpp
		Added throw_error function to allow for inclusion of filename
		into the error reports

2012-12-03
	MatrixMatchMaker.cpp:
		disabled abnormal exit if slice of pmbq cannot be created -
		often the filename can exceed the filesystem limit, but that's
		not a sufficient reason to terminate the run altogether
2012-11-23
	MatrixMatchMaker.cpp:
		corrected syntax for printslices and printpmbq options.
2012-11-05
	Alignment.cpp
		Be more flexible with alignment format:
			convert lower-case to upper-case
			if not a valid amino acid or a gap then treat as X (unknown = gap)
			Note: these changes will are permanent, i.e. will be appied if the aligment is printed at any point. 
2012-10-25
	MatrixMatchMaker.cpp:
		Added command-line options to 
		a) filter out sequences with high gap proportion
		b) print generated slices and matrices (mainly for debugging)
2012-10-22
	MatrixMatchMaker.cpp:
		Added the -aln2pmb command line option to enable recent additions.
		Wrote usage info for -aln2pmb  
2012-10-19
	MatrixMatchMaker.cpp:
	Alignment.cpp
		For slices implemented multiple comma-separated ranges as well as inverse ranges.
2012-10-18
	Created ProteinGroup parent class for Alignment and DistanceMatrix classes.
		Tried to make find_in_cache as inherited, but vector<child> cannot be casted as vector<parent>
2012-10-11
	DistanceMatrix.cpp, Alignment.cpp: